--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,12 @@
   body {
       background-color: lavender;
     }
+    h1{
+        color: #66BFBF;
+    }
+h3{
+    color: #66BFBF;
+}
 
     hr {
 
